hphp/test/quick/post_try_error.php.expectf

Fatal error: A try statement requires a catch or a finally clause. in %s/post_try_error.php on line 3
